--- a/ExampleApps/Makefile
+++ b/ExampleApps/Makefile
@@ -5,14 +5,14 @@ ifneq ($(shell uname -s), Darwin)
 RT = -lrt
 endif
 
-CFLAGS = -O2 -Wall -std=c99
-CXXFLAGS = -O2 -Wall -std=c++11 -DRDTSCP=1
+CFLAGS = -O0 -g -Wall -std=c99
+CXXFLAGS = -O0 -g  -Wall -std=c++11 -DRDTSCP=1
 
 CFILES   =
 COBJS    =
 
-CXXFILES = sumapp.cpp
-CXXOBJS  = sumapp.o
+CXXFILES = sumapp.cpp readtest.cpp
+CXXOBJS  = sumapp.o readtest.o
 
 
 INCS = 
@@ -23,7 +23,8 @@ LIBS = -lraftlight $(RT)
 compile: $(CXXFILES) $(CFILES)
 	$(MAKE) $(CXXOBJS) $(COBJS)
 	$(CXX)  $(LDFLAGS) $(CXXFLAGS) -o sumapp sumapp.o $(LIBS)
+	$(CXX)  $(LDFLAGS) $(CXXFLAGS) -o readtest readtest.o $(LIBS)
 
 .PHONY: clean
 clean:
-	rm -rf sumapp $(CXXOBJS) $(COBJS)
+	rm -rf readtest sumapp $(CXXOBJS) $(COBJS)
