--- a/TestCases/Makefile
+++ b/TestCases/Makefile
@@ -5,25 +5,18 @@ ifneq ($(shell uname -s), Darwin)
 RT = -lrt
 endif
 
-CFLAGS = -O2 -Wall -std=c99
+CFLAGS   = -O2 -Wall -std=c99
 CXXFLAGS = -O2 -Wall -std=c++11 -DRDTSCP=1
 
-CFILES   =
-COBJS    =
+EXE = allocate portTypeException
+OBS = $(addsuffix .o, $(EXE))
 
-CXXFILES = portTypeException.cpp
-CXXOBJS  = portTypeException.o
+all: $(EXE)
 
+allocate: allocate.o
 
-INCS = 
-
-LDFLAGS = 
-LIBS = -lraftlight $(RT)
-
-compile: $(CXXFILES) $(CFILES)
-	$(MAKE) $(CXXOBJS) $(COBJS)
-	$(CXX)  $(LDFLAGS) $(CXXFLAGS) -o portTypeException  portTypeException.o $(LIBS)
+portTypeException: portTypeException.o
 
 .PHONY: clean
 clean:
-	rm -rf portTypeException  $(CXXOBJS) $(COBJS)
+	rm -rf $(EXE) $(OBS)
