--- a/TestCases/Makefile
+++ b/TestCases/Makefile
@@ -5,11 +5,11 @@ ifneq ($(shell uname -s), Darwin)
 RT = -lrt
 endif
 
-CFLAGS   = -O2 -Wall -std=c99
-CXXFLAGS = -O2 -Wall -std=c++11 -DRDTSCP=1 -DUNITTEST=1
+CFLAGS   = -O0 -g -Wall -std=c99
+CXXFLAGS = -O0 -g  -Wall -std=c++11 -DRDTSCP=1 -DUNITTEST=1
 LDFLAGS  = -lraftlight
 
-EXE = allocate portTypeException dynallocate
+EXE = allocate portTypeException dynallocate stdlibsupport 
 OBS = $(addsuffix .o, $(EXE))
 
 all: $(EXE)
@@ -17,6 +17,7 @@ all: $(EXE)
 allocate: allocate.o
 portTypeException: portTypeException.o
 dynallocate: dynallocate.o
+stdlibsupport: stdlibsupport.o
 
 .PHONY: clean
 clean:
