--- a/TestCases/Makefile
+++ b/TestCases/Makefile
@@ -9,7 +9,8 @@ CFLAGS   = -O0 -g -Wall -std=c99
 CXXFLAGS = -O0 -g  -Wall -std=c++11 -DRDTSCP=1 -DUNITTEST=1
 LDFLAGS  = -lraft
 
-EXE = allocate portTypeException dynallocate stdlibsupport split 
+EXE = allocate portTypeException dynallocate stdlibsupport split \
+      join
 OBS = $(addsuffix .o, $(EXE))
 
 all: $(EXE)
@@ -19,6 +20,7 @@ portTypeException: portTypeException.o
 dynallocate: dynallocate.o
 stdlibsupport: stdlibsupport.o
 split: split.o
+join: join.o
 
 .PHONY: clean
 clean:
