--- a/ExampleApps/Makefile
+++ b/ExampleApps/Makefile
@@ -5,15 +5,15 @@ ifneq ($(shell uname -s), Darwin)
 RT = -lrt
 endif
 
-CFLAGS   = -O3  -Wall -std=c99
-CXXFLAGS = -O3  -Wall -std=c++11 -DRDTSCP=1
+CFLAGS   = -O0 -g  -Wall -std=c99
+CXXFLAGS = -O0 -g  -Wall -std=c++11 -DRDTSCP=1
 
 CFILES   =
 COBJS    =
 
-CXXFILES = sumapp.cpp readtest.cpp singlequeue.cpp
-CXXOBJS  = sumapp.o readtest.o singlequeue.o
-EXENAMES = sumapp readtest singlequeue
+CXXFILES = sumapp.cpp readtest.cpp singlequeue.cpp rgrep.cpp rkverifymatch.cpp
+CXXOBJS  = sumapp.o readtest.o singlequeue.o rgrep.o rkverifymatch.o
+EXENAMES = sumapp readtest singlequeue rgrep
 
 INCS = 
 
@@ -25,7 +25,7 @@ compile: $(CXXFILES) $(CFILES)
 	$(CXX)  $(LDFLAGS) $(CXXFLAGS) -o sumapp sumapp.o $(LIBS)
 	$(CXX)  $(LDFLAGS) $(CXXFLAGS) -o readtest readtest.o $(LIBS)
 	$(CXX)  $(LDFLAGS) $(CXXFLAGS) -o singlequeue singlequeue.o $(LIBS)
-
+	$(CXX)  $(LDFLAGS) $(CXXFLAGS) -o rgrep rgrep.o rkverifymatch.o $(LIBS)
 .PHONY: clean
 clean:
 	rm -rf $(EXENAMES) $(CXXOBJS) $(COBJS)
