--- a/ExampleApps/Makefile
+++ b/ExampleApps/Makefile
@@ -2,11 +2,11 @@ CC  ?= gcc
 CXX ?= g++
 
 ifneq ($(shell uname -s), Darwin)
-RT = -lrt
+RT = -lrt -static -static-libgcc -static-libstdc++ -lpthread
 endif
 
-CFLAGS   = -O0 -g   -Wall -std=c99
-CXXFLAGS = -O0 -g   -Wall -std=c++11 -DRDTSCP=1
+CFLAGS   = -O3   -Wall -std=c99
+CXXFLAGS = -O3   -Wall -std=c++11 -DRDTSCP=1
 
 CFILES   =
 COBJS    =
