--- a/ExampleApps/Makefile
+++ b/ExampleApps/Makefile
@@ -2,12 +2,14 @@ CC  ?= gcc
 CXX ?= g++
 
 ifneq ($(shell uname -s), Darwin)
-RT = -lrt -static -static-libgcc -static-libstdc++ -lpthread
+LINUXLIBS 	 = -lrt -lpthread
+LINUXLDFLAGS = -static -static-libgcc -static-libstdc++
 endif
 
-CFLAGS   = -O3 -mavx  -Wall -std=c99
-CXXFLAGS = -O3 -mavx  -Wall -std=c++11 -DRDTSCP=1
-LDLIBS   = -lraft $(RT)
+CFLAGS   = -O3 -msse4.1 -Wall -std=c99
+CXXFLAGS = -O3 -msse4.1 -Wall -std=c++11 -DRDTSCP=1
+LDFLAGS  = $(LINUXLDFLAGS)
+LDLIBS   = -lraft $(LINUXLIBS)
 
 EXE      = sumapp readtest singlequeue rgrep
 CPPFILES = rkverifymatch
@@ -19,6 +21,7 @@ sumapp: sumapp.o
 readtest: readtest.o
 singlequeue: singlequeue.o
 rgrep: rgrep.o rkverifymatch.o
+	$(CXX) $(CXXFLAGS) $(LDFLAGS)  $^ -o $@ $(LDLIBS)
 rkverifymatch.o: rkverifymatch.cpp
 
 .PHONY: clean
