--- a/ExampleApps/Makefile
+++ b/ExampleApps/Makefile
@@ -6,10 +6,11 @@ LINUXLIBS 	 = -lrt -lpthread
 LINUXLDFLAGS = -static -static-libgcc -static-libstdc++
 endif
 
+CPPFLAGS = -I./ahocorasick/
 CFLAGS   = -O3 -msse4.1 -Wall -std=c99
 CXXFLAGS = -O3 -msse4.1 -Wall -std=c++11 -DRDTSCP=1
-LDFLAGS  = $(LINUXLDFLAGS)
-LDLIBS   = -lraft $(LINUXLIBS)
+LDFLAGS  = -L./ $(LINUXLDFLAGS)
+LDLIBS   = -lahocorasick -lraft $(LINUXLIBS)
 
 EXE      = sumapp readtest singlequeue rgrep
 CPPFILES = rkverifymatch
