--- a/ExampleApps/Makefile
+++ b/ExampleApps/Makefile
@@ -7,8 +7,8 @@ LINUXLDFLAGS = -static -static-libgcc -static-libstdc++
 endif
 
 CPPFLAGS = -I./ahocorasick/
-CFLAGS   = -Ofast -mtune=native -Wall -std=c99
-CXXFLAGS = -Ofast -mtune=native  -std=c++11 -DRDTSCP=1
+CFLAGS   = -O0 -g -Wall -std=c99
+CXXFLAGS = -O0 -g -Wall -std=c++11 -DRDTSCP=1
 LDFLAGS  = -L./ $(LINUXLDFLAGS)
 LDLIBS   = -lahocorasick -lraft $(LINUXLIBS)
 
