--- a/ExampleApps/WebStats/Makefile
+++ b/ExampleApps/WebStats/Makefile
@@ -6,7 +6,7 @@ LINUXLIBS 	 = -lrt -lpthread
 LINUXLDFLAGS = -static -static-libgcc -static-libstdc++ 
 endif
 
-CPPFLAGS = -I./ahocorasick/
+CPPFLAGS = 
 CFLAGS   = -Ofast -mtune=native -Wall -std=c99
 CXXFLAGS = -Ofast -mtune=native -Wall -std=c++11 -DRDTSCP=1
 LDFLAGS  = -L./ $(LINUXLDFLAGS)
