--- a/TestCases/Makefile
+++ b/TestCases/Makefile
@@ -16,7 +16,7 @@ LDLIBS  = $(STATIC)  -lstdc++ -lraft -lgsl -lscotch -lscotcherr  $(RT)
 
 EXE = allocate portTypeException dynallocate stdlibsupport split \
       join lambdatest allocate_s foreach peekrange gamma uniform \
-      gaussian exponential partitionTest iterator
+      gaussian exponential partitionTest iterator sequential
 
 OBS = $(addsuffix .o, $(EXE))
 
@@ -38,6 +38,7 @@ gaussian: gaussian.o
 exponential: exponential.o
 partitionTest: partitionTest.o
 iterator: iterator.o
+sequential: sequential.o
 
 .PHONY: clean
 clean:
