finished re-working the test cases and the example appls, need to re-add the sorting and searching kernels as packages

--- a/ExampleApps/Makefile
+++ b/ExampleApps/Makefile
@@ -9,7 +9,7 @@ endif
 CFLAGS   = -Ofast -mtune=native -Wall -std=c99
 CXXFLAGS = -Ofast -mtune=native -Wall -std=c++11 -DRDTSCP=1
 LDFLAGS  = -L./ $(LINUXLDFLAGS)
-LDLIBS   = -lraft $(LINUXLIBS)
+LDLIBS   = -lraft -lgsl -lscotch -lscotcherr $(LINUXLIBS)
 
 EXE      = sumapp readtest singlequeue
 OBJS     = $(addsuffix .o, $(CPPFILES)) $(addsuffix .o, $(EXE))
