--- a/TestCases/Makefile
+++ b/TestCases/Makefile
@@ -17,7 +17,7 @@ BUILD = $(RELEASE)
 endif
 
 CFLAGS   =  $(BUILD) -Wall -std=c99 
-CXXFLAGS =  $(BUILD) -Wall -std=c++11 -DRDTSCP=1 
+CXXFLAGS =  $(BUILD) -Wall -std=c++11 -DRDTSCP=1 -Wstack-protector -fstack-protector-all
 LDLIBS  = $(STATIC)  -lstdc++ -lraft -lgsl $(RT) -lm 
 
 EXE = allocate portTypeException dynallocate stdlibsupport split \
