--- a/examples/Makefile
+++ b/examples/Makefile
@@ -12,12 +12,13 @@ CXXFLAGS = -Ofast -mtune=native -Wall -std=c++11 -DRDTSCP=1
 LDFLAGS  = -L./ $(LINUXLDFLAGS)
 LDLIBS   = -lstdc++ -lraft -lgsl  $(LINUXLIBS)
 
-EXE      = sumapp readtest singlequeue
+EXE      = sumapp readtest singlequeue multapp
 OBJS     = $(addsuffix .o, $(CPPFILES)) $(addsuffix .o, $(EXE))
 
 all: $(EXE)
 
 sumapp: sumapp.o
+multapp: multapp.o
 readtest: readtest.o
 singlequeue: singlequeue.o
 
