updates, cleaned up code a bit, fixed bug in dynamic fifo re-sizing where size() call could get deleted buffer about 1 in a billion executions....

--- a/benchmarks/pi/Makefile
+++ b/benchmarks/pi/Makefile
@@ -3,22 +3,30 @@ CXX ?= g++
 AR  ?= ar
 
 ifneq ($(shell uname -s), Darwin)
-LINUXLIBS 	 = -lrt -lpthread
+RT =  -lrt -Wl,--whole-archive -lpthread -Wl,--no-whole-archive
+ALLLIBS 	 = $(RT)  `pkg-config --libs gsl`
 LINUXLDFLAGS = -static -static-libgcc -static-libstdc++ 
+else
+ALLLIBS = -lgsl -lgslcblas -lm
 endif
 
-CFLAGS   = -Ofast -mtune=native -Wall -std=c99
-CXXFLAGS = -Ofast -mtune=native -Wall -std=c++11 -DRDTSCP=1
+CFLAGS   = -O0 -g  -Wall -std=c99
+CXXFLAGS = -O0 -g  -Wall -std=c++11 -DRDTSCP=1
+
 LDFLAGS  = -L./ $(LINUXLDFLAGS)
-LDLIBS   = -lstdc++ -lraft -lgsl -lcmdargs $(LINUXLIBS)
+LDLIBS   = -lstdc++ -lraft  -lcmdargs $(ALLLIBS)
 
 EXE      = pisim
 OBJS     = $(addsuffix .o, $(CPPFILES)) $(addsuffix .o, $(EXE))
+
 
 all: $(EXE)
 
 pisim: pisim.o
 
+
 .PHONY: clean
 clean:
 	rm -rf $(EXE) $(OBJS) intelremotemonfifo*
+
+
