--- a/testsuite/Makefile
+++ b/testsuite/Makefile
@@ -17,7 +17,7 @@ BUILD = $(RELEASE)
 endif
 
 CFLAGS   =  $(BUILD) -Wall -std=c99 
-CXXFLAGS =  $(BUILD) -Wall -std=c++11 -DRDTSCP=1 
+CXXFLAGS =  $(BUILD) -Wall -std=c++11 -DRDTSCP=1 -I../
 LDLIBS  = $(STATIC)  -lstdc++ -lraft -lgsl -lgslcblas $(RT) -lm 
 
 EXE = allocate portTypeException dynallocate stdlibsupport split \
