--- a/examples/stringsearch/Makefile
+++ b/examples/stringsearch/Makefile
@@ -7,17 +7,19 @@ LINUXLIBS 	 = -lrt -lpthread
 LINUXLDFLAGS = -static -static-libgcc -static-libstdc++ 
 endif
 
-CFLAGS   = -Ofast -mtune=native -Wall -std=c99
-CXXFLAGS = -I./ahocorasick/ -Ofast -mtune=native -Wall -std=c++11 -DRDTSCP=1
+CFLAGS   = -O1 -Wall -std=c99
+CXXFLAGS = -I./ahocorasick/ -I../../fifo/ -O0 -g -Wall -std=c++11 -DRDTSCP=1
 LDFLAGS  = -L./ $(LINUXLDFLAGS)
-LDLIBS   = -lahocorasick -lstdc++ -lraft -lgsl  $(LINUXLIBS)
+LDLIBS   = -lahocorasick -lstdc++ -lraft -lgsl -lgslcblas -lm $(LINUXLIBS)
 
-EXE      = rgrep
+EXE      = rgrep enum_rk_rgrep enum_rgrep 
 OBJS     = $(addsuffix .o, $(CPPFILES)) $(addsuffix .o, $(EXE))
 
 all: $(EXE)
 
 rgrep: rgrep.o
+enum_rk_rgrep: enum_rk_rgrep.o
+enum_rgrep: enum_rgrep.o
 
 .PHONY: clean
 clean:
