--- a/benchmarks/pi/Makefile
+++ b/benchmarks/pi/Makefile
@@ -1,17 +1,17 @@
-CC  ?= gcc
-CXX ?= g++
+CC  ?= clang
+CXX ?= clang++
 AR  ?= ar
 
 ifneq ($(shell uname -s), Darwin)
 RT =  -lrt -Wl,--whole-archive -lpthread -Wl,--no-whole-archive
 ALLLIBS 	 = $(RT)  `pkg-config --libs gsl`
-LINUXLDFLAGS = -static -static-libgcc -static-libstdc++ 
+LINUXLDFLAGS = -static #-static-libgcc -static-libstdc++ 
 else
 ALLLIBS = -lgsl -lgslcblas -lm
 endif
 
-CFLAGS   = -O0 -g  -Wall -std=c99
-CXXFLAGS = -O0 -g  -Wall -std=c++11 -DRDTSCP=1
+CFLAGS   = -O3 -mtune=native  -Wall -std=c99
+CXXFLAGS = -O3 -mtune=native  -Wall -std=c++11 -DRDTSCP=1
 
 LDFLAGS  = -L./ $(LINUXLDFLAGS)
 LDLIBS   = -lstdc++ -lraft  -lcmdargs $(ALLLIBS)
