temp updates, will remove some code in next update...

--- a/examples/stringsearch/Makefile
+++ b/examples/stringsearch/Makefile
@@ -7,8 +7,8 @@ LINUXLIBS 	 = -lrt -Wl,--whole-archive -lpthread -Wl,--no-whole-archive
 LINUXLDFLAGS = -static #-static-libgcc -static-libstdc++ 
 endif
 
-CFLAGS   = -O0 -g -mtune=native  -Wall -std=c99
-CXXFLAGS = -I./ahocorasick/ -I../../fifo/ -O0 -g -mtune=native -Wall -std=c++11 -DRDTSCP=1
+CFLAGS   = -O3 -mtune=native  -Wall -std=c99
+CXXFLAGS = -I./ahocorasick/ -I../../fifo/ -O3  -mtune=native -Wall -std=c++11 -DRDTSCP=1
 LDFLAGS  = -L./ $(LINUXLDFLAGS)
 LDLIBS   = -lahocorasick -lstdc++ -lraft -lgsl -lgslcblas -lm $(LINUXLIBS)
 
