--- a/testsuite/Makefile.testraft10
+++ b/testsuite/Makefile.testraft10
@@ -16,8 +16,10 @@ else
 BUILD = $(RELEASE)
 endif
 
+EXTRA = -DHAVE_VIDEOINPUT=HAVE_DSHOW
+
 CFLAGS   =  $(BUILD) -Wall -std=c99 
-CXXFLAGS =  $(BUILD) `pkg-config --cflags opencv` -Wall -std=c++11 -DRDTSCP=1 -I../
+CXXFLAGS =  $(BUILD) $(EXTRA) `pkg-config --cflags opencv` -Wall -std=c++11 -DRDTSCP=1 -I../
 LDLIBS  = $(STATIC)  `pkg-config --libs opencv` -lstdc++ -lraft -lgsl -lgslcblas $(RT) -lm 
 
 EXE = testraft10 testraft11
