--- a/testsuite/Makefile.testraft10
+++ b/testsuite/Makefile.testraft10
@@ -22,7 +22,7 @@ CFLAGS   =  $(BUILD) -Wall -std=c99
 CXXFLAGS =  $(BUILD) $(EXTRA) `pkg-config --cflags opencv` -Wall -std=c++11 -DRDTSCP=1 -I../
 LDLIBS  = $(STATIC)  `pkg-config --libs opencv` -lstdc++ -lraft -lgsl -lgslcblas $(RT) -lm 
 
-EXE = testraft10 testraft11
+EXE = testraft10 
 
 OBS = $(addsuffix .o, $(EXE))
 
