--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
     - echo $LANG
     - echo $LC_ALL
     - if [ $TRAVIS_OS_NAME == linux ]; then sudo apt-get update && sudo apt-get install -y libgsl0-dev libgsl0ldbl; fi
-    if [ $TRAVIS_OS_NAME == osx ]; then brew update && brew install gsl && brew link --force gsl; fi
+    - if [ $TRAVIS_OS_NAME == osx ]; then brew update && brew install gsl && brew link --force gsl; fi
     - mkdir build
     - cd build
     - cmake ..
