--- a/.travis.yml
+++ b/.travis.yml
@@ -20,18 +20,19 @@ cache:
 env:
     global:
         - GCC_VERSION=5
+
 branches:
     only:
         - master
 
 before_install:
-    - if [ ${CC} == "clang" ]; then
-      export CC=/usr/bin/clang-3.7 CXX=/usr/bin/clang++-3.7;
-      C=clang;
-    else
-      export CC=/usr/bin/gcc-${GCC_VERSION} CXX=/usr/bin/g++-${GCC_VERSION} ;
-      C=gcc;
-    fi
+    -   if [ ${CC} == "clang" ]; then
+            export CC=/usr/bin/clang-3.7 CXX=/usr/bin/clang++-3.7;
+            C=clang;
+        else
+            export CC=/usr/bin/gcc-${GCC_VERSION} CXX=/usr/bin/g++-${GCC_VERSION} ;
+            C=gcc;
+        fi
 
 
 addons:
@@ -59,6 +60,7 @@ before_script:
             ./configure --prefix=${HOME}/binutils;
             make -j 4;
             make install;
+            cd ..
         fi
     - export PATH=$PATH:${HOME}/binutils/bin
     - echo $LANG
@@ -69,4 +71,5 @@ before_script:
 
 
 
-script: make
+script: 
+    - make && make test
