updates to ci file

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,14 +54,13 @@ addons:
 
 
 before_script:
-    -   if [ ! -d "$HOME/binutils/bin" ]; then
-            wget http://ftp.gnu.org/gnu/binutils/binutils-2.25.1.tar.gz -O - | tar -jxf -;
-            cd binutils-2.25.1;
-            ./configure --prefix=${HOME}/binutils;
-            make -j 4;
-            make install;
-            cd ..
-        fi
+  - if [ ! -d "$HOME/binutils/bin" ]; then
+       wget http://ftp.gnu.org/gnu/binutils/binutils-2.25.tar.bz2 -O - | tar -jxf -;
+       cd binutils-2.25;
+       ./configure --prefix=${HOME}/binutils;
+       make -j 4;
+       make install;
+    fi
     - export PATH=$PATH:${HOME}/binutils/bin
     - echo $LANG
     - echo $LC_ALL
