--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_install:
             export CC=/usr/bin/clang-3.7 CXX=/usr/bin/clang++-3.7;
             C=clang;
         else
-            export CC=/usr/bin/gcc-${GCC_VERSION} CXX=/usr/bin/g++-${GCC_VERSION} ;
+            export CC=/usr/bin/gcc-5 CXX=/usr/bin/g++-5 ;
             C=gcc;
         fi
 
