--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,12 @@ cache:
   apt:
   ccache:
   directories:
-    - $HOME/binutils
-
+    - $HOME/cmake-3.4.0-Linux-x86_64
 
 env:
     global:
         - GCC_VERSION=5
+        - CMAKE_VERSION=3.4.0-Linux-x86_64
         - CXXFLAGS=-std=c++11
         - CFLAGS=-std=c99
 
@@ -41,7 +41,6 @@ addons:
  apt:
     sources:
       - ubuntu-toolchain-r-test
-      - george-edison55-cmake-3.x
       - llvm-toolchain-precise
     packages:
 # ensure these match GCC_VERSION
@@ -52,7 +51,6 @@ addons:
       - libgsl0-dev
       - libgsl0ldbl
       - gawk
-      - cmake
       - build-essential
       - wget
       - libtool
@@ -61,9 +59,14 @@ addons:
 before_script:
     - echo $LANG
     - echo $LC_ALL
+    -   if [ ! -d "$HOME/cmake-3.4.0-Linux-x86_64/bin" ]; then
+            wget https://cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz -O - | tar -jxf -;
+        fi
+
+
     - mkdir build
     - cd build
-    - cmake ..
+    - $HOME/cmake-${CMAKE_VERSION}/bin/cmake ..
 
 
 
