--- a/.travis.yml
+++ b/.travis.yml
@@ -59,11 +59,9 @@ addons:
 before_script:
     - echo $LANG
     - echo $LC_ALL
-    -   if [ ! -d "$HOME/cmake-3.4.0-Linux-x86_64/bin" ]; then
-            wget --no-check-certificate https://cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz -O - | tar -zxf -;
+    -   if [ ! -d "$HOME/cmake-${CMAKE_VERSION}/bin" ]; then
+            wget --no-check-certificate https://cmake.org/files/v3.4/cmake-${CMAKE_VERSION}.tar.gz -O - | tar -zxf -;
         fi
-
-
     - mkdir build
     - cd build
     - $HOME/cmake-${CMAKE_VERSION}/bin/cmake ..
