--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ include( CheckCXXCompilerFlag )
 check_cxx_compiler_flag( "-std=c++11" COMPILER_SUPPORTS_CXX11 )
 if( COMPILER_SUPPORTS_CXX11 )
  set( CMAKE_CXX_STANDARD 11 )
+ set( CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 else()
  message( FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a newer compiler" )
 endif()
