--- a/.travis.yml
+++ b/.travis.yml
@@ -55,7 +55,7 @@ addons:
 
 
 before_script:
-    - wget https://cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz -O /tmp/cmake.tar.gz
+    - wget --no-check-certificate  https://cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz -O /tmp/cmake.tar.gz
     - tar -jxf /tmp/cmake.tar.gz
     - echo $LANG
     - echo $LC_ALL
