--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ addons:
 
 before_script:
     - wget --no-check-certificate  https://cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz -O /tmp/cmake.tar.gz
-    - tar -jxf /tmp/cmake.tar.gz
+    - tar -zxf /tmp/cmake.tar.gz
     - echo $LANG
     - echo $LC_ALL
     - mkdir build
