--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ addons:
 before_script:
     - wget --no-check-certificate  https://cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz
     - tar -zxf cmake-3.4.0-Linux-x86_64.tar.gz
-    - export PATH=$PATH:cmake-3.4.0-Linux-x86_64/bin/
+    - export PATH=cmake-3.4.0-Linux-x86_64/bin/:$PATH
     - echo $LANG
     - echo $LC_ALL
     - mkdir build
