--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,6 @@ include( CheckCXXCompilerFlag )
 check_cxx_compiler_flag( "-std=c++11" COMPILER_SUPPORTS_CXX11 )
 if( COMPILER_SUPPORTS_CXX11 )
  set( CMAKE_CXX_STANDARD 11 )
- set( CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 else()
  message( FATAL_ERROR "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a newer compiler" )
 endif()
@@ -51,7 +50,7 @@ if( COMPILER_SUPPORTS_C99 )
 else()
  message( FATAL_ERROR "The compiler ${CMAKE_C_COMPILER} has no c99 support. Please use a newer compiler" )
 endif()
-add_definitions( "-DLIBCOMPILE=1  -DRDTSCP=1" )
+add_definitions( -DLIBCOMPILE=1  -DRDTSCP=1 )
 
 
 file(GLOB_RECURSE FIFO_SRC_FILES ${PROJECT_SOURCE_DIR}/fifo/*.cpp)
