--- a/.travis.yml
+++ b/.travis.yml
@@ -3,70 +3,62 @@ sudo: false
 
 language: cpp 
 
-compiler: 
-    - gcc 
-    - clang
-
-os:
-    - linux
-
-cache:
-  apt:
-  ccache:
-  directories:
-
-env:
-    global:
-        - GCC_VERSION=5
-        - CXXFLAGS=-std=c++11
-        - CFLAGS=-std=c99
-
 branches:
     only:
         - master
 
-before_install:
-    -   if [ ${CC} != "clang" ]; then
-            export CC=/usr/bin/gcc-${GCC_VERSION} CXX=/usr/bin/g++-${GCC_VERSION};
-            C=gcc;
-        fi
+matrix:
+   -  os: linux
+        compiler: 
+            - gcc 
+            - clang
+        env:
+            global:
+                - GCC_VERSION=5
+                - CXXFLAGS=-std=c++11
+                - CFLAGS=-std=c99
+        before_install:
+            -   if [ ${CC} != "clang" ]; then
+                    export CC=/usr/bin/gcc-${GCC_VERSION} CXX=/usr/bin/g++-${GCC_VERSION};
+                    C=gcc;
+                fi
+        addons:
+         apt:
+            sources:
+              - ubuntu-toolchain-r-test
+              - llvm-toolchain-precise
+            packages:
+        # ensure these match GCC_VERSION
+              - gcc-5
+              - g++-5
+              - binutils
+              - libgsl0-dev
+              - libgsl0ldbl
+              - gawk
+              - build-essential
+              - wget
+              - xz-utils
+              - libtool
+        before_script:
+            - wget --no-check-certificate  https://cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz
+            - tar -zxf cmake-3.4.0-Linux-x86_64.tar.gz
+            - export PATH=$PWD/cmake-3.4.0-Linux-x86_64/bin/:$PATH
+            - wget --no-check-certificate http://llvm.org/releases/3.7.0/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz;
+            - tar -xf clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
+            - export PATH=$PWD/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04/bin:$PATH
+            - echo $LANG
+            - echo $LC_ALL
+            - mkdir build
+            - cd build
+            - cmake ..
+        
+        script:
+            - ${CC} --version ; ${CXX} --version; cmake --version
+            - env
+            - make -j 4 && make test
+            
 
 
-addons:
- apt:
-    sources:
-      - ubuntu-toolchain-r-test
-      - llvm-toolchain-precise
-    packages:
-# ensure these match GCC_VERSION
-      - gcc-5
-      - g++-5
-      - binutils
-      - libgsl0-dev
-      - libgsl0ldbl
-      - gawk
-      - build-essential
-      - wget
-      - xz-utils
-      - libtool
-
-
-before_script:
-    - wget --no-check-certificate  https://cmake.org/files/v3.4/cmake-3.4.0-Linux-x86_64.tar.gz
-    - tar -zxf cmake-3.4.0-Linux-x86_64.tar.gz
-    - export PATH=$PWD/cmake-3.4.0-Linux-x86_64/bin/:$PATH
-    - wget --no-check-certificate http://llvm.org/releases/3.7.0/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz;
-    - tar -xf clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz
-    - export PATH=$PWD/clang+llvm-3.7.0-x86_64-linux-gnu-ubuntu-14.04/bin:$PATH
-    - echo $LANG
-    - echo $LC_ALL
-    - mkdir build
-    - cd build
-    - cmake ..
 
 
 
-script:
-    - ${CC} --version ; ${CXX} --version; cmake --version
-    - env
-    - make -j 4 && make test
